<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Translate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">Result</string>
    <string name="search_hint">Type the word here &#8230;</string>
    <string name="query_example">cat</string>
    <string name="translation_example">кот</string>
    <string name="description">Downloaded images</string>
    <string name="button_text">Search</string>
    <string name="title_activity_search">What will we search for?</string>
    <string name="button_text_result">Something else?</string>
    <string name="progress">"Translating...</string>

</resources>
