<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity">

    <ViewSwitcher
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/switcher">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:id="@+id/word_field"
                android:layout_gravity="center"
                android:hint="@string/search_hint"
                android:inputType="textAutoComplete"
                android:layout_marginBottom="40dp"
                android:gravity="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text"
                android:id="@+id/search_button"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:id="@+id/progress"
                android:layout_marginTop="180pt"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:textSize="15pt" />
        </FrameLayout>

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/query_example"
                    android:id="@+id/word_query"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/translation_example"
                    android:id="@+id/translation"
                    android:layout_below="@+id/word_query"
                    android:layout_centerHorizontal="true"
                    android:textSize="35sp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:id="@+id/imageView"
                android:clickable="true"
                android:contentDescription="@string/description"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </FrameLayout>

    </ViewSwitcher>

</FrameLayout>
